src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0009.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0009 {
  enum E;
  class C;
  interface I1 extends C;
  interface I2 extends E;
  
}